src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsT-ofT-dwF1000-dhP0.5-b-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\nopen floating: true\ndefault column width: F1000\ndefault window height: P0.5\nborder on\nwant fullscreen: AN"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1272 × 712, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen]
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 0 × 0, bounds: 1272 × 712, states: [Activated]
